src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_14_evaluation.snap
---
source: src/tests/call_expression/mod.rs
expression: evaluation
---
String {
    value: "positivenegative",
}
