src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_2_syntax_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Call {
            function: Function {
                parameters: [
                    "x",
                ],
                block: Block {
                    nodes: [
                        Statement {
                            statement: Return {
                                expression: Identifier {
                                    identifier: "x",
                                },
                            },
                        },
                    ],
                },
            },
            arguments: [
                Integer {
                    literal: 5,
                },
            ],
        },
    },
]
