src/tests/call_expression/snapshots/monkey_interpreter__tests__call_expression__test_call_expression_case_3_syntax_analysis.snap
---
source: src/tests/call_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Call {
            function: Function {
                parameters: [
                    "x",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: MultiplyInfix {
                                left_hand: Identifier {
                                    identifier: "x",
                                },
                                right_hand: Integer {
                                    literal: 2,
                                },
                            },
                        },
                    ],
                },
            },
            arguments: [
                Integer {
                    literal: 5,
                },
            ],
        },
    },
]
